--- a/index.html
+++ b/index.html
@@ -381,22 +381,16 @@
       </div>
       <form name="contact" method="POST" data-netlify="true">
   <p>
-    <label>Your Name: <input type="text" name="name" /></label>   
+    <label>Digite seu nome: <input type="text" name="name" /></label>   
   </p>
   <p>
-    <label>Your Email: <input type="email" name="email" /></label>
+    <label>Seu Email: <input type="email" name="email" /></label>
   </p>
   <p>
-    <label>Your Role: <select name="role[]" multiple>
-      <option value="leader">Leader</option>
-      <option value="follower">Follower</option>
-    </select></label>
+    <label>Menssagem: <textarea name="message"></textarea></label>
   </p>
   <p>
-    <label>Message: <textarea name="message"></textarea></label>
-  </p>
-  <p>
-    <button type="submit">Send</button>
+    <button type="submit" class="btn btn-primary">ENVIAR</button>
   </p>
 </form>
     </section>
