--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     });
       function matriculaFn(mat){
       jQuery.ajax({
-method:'POST',
+method:'GET',
 url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/313386', //mudar aqui para a url que o gus te passou
 async: true,
        crossDomain:false, //testa com false se der pau
