--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
       $(".iframe-preview").addClass("iframe-preview-mobile");
     });
       function matriculaFn(mat){
-      jQuery.ajax({
+      $.ajax({
 method:'GET',
 url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/', //mudar aqui para a url que o gus te passou
 async: true,
