--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
       function matriculaFn(mat){
       $.ajax({
 method:'GET',
-url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/', //mudar aqui para a url que o gus te passou
+url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge', //mudar aqui para a url que o gus te passou
 async: true,
        crossDomain:false, //testa com false se der pau
 contentType: 'application/json;charset=utf-8',       
@@ -458,11 +458,11 @@ success: function(data)
       $("#IDDOCAMPO").val(data.AlgumaCoisa); //o data será um objeto com os dados nessa linha é o exemplo 
 
          },
-error : function(xhr, status, error) {
+//error : function(xhr, status, error) {
 // do stuff here
-var data = jQueryJSON(xhr.responseText);
-console.log(data); 
-}
+//var data = jQueryJSON(xhr.responseText);
+//console.log(data); 
+//}
     });
 
         
