--- a/index.html
+++ b/index.html
@@ -442,9 +442,9 @@
       function matriculaFn(mat){
       $.ajax({
 method:'GET',
-url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/mat', //mudar aqui para a url que o gus te passou
+url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/txtMatricula', //mudar aqui para a url que o gus te passou
 async: true,
-       crossDomain:false, //testa com false se der pau
+       crossDomain:true, //testa com false se der pau
 contentType: 'application/json;charset=utf-8',       
 dataType: 'json',       
 headers: {
