--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
       $(".iframe-preview").addClass("iframe-preview-mobile");
     });
       function matriculaFn(mat){
-      $.ajax({
+      jQuery.ajax({
 method:'GET',
 url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/txtMatricula', //mudar aqui para a url que o gus te passou
 async: true,
