--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
       function matriculaFn(mat){
       jQuery.ajax({
 method:'GET',
-url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/342777', //mudar aqui para a url que o gus te passou
+url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/txtMatricula', //mudar aqui para a url que o gus te passou
 async: true,
        crossDomain:true, //testa com false se der pau
 contentType: 'application/json;charset=utf-8',       
@@ -458,11 +458,11 @@ success: function(data)
       $("#empresa").val(data.empresa); //o data será um objeto com os dados nessa linha é o exemplo 
 
          },
-//error : function(xhr, status, error) {
-// do stuff here
-//var data = jQueryJSON(xhr.responseText);
-//console.log(data); 
-//}
+error : function(xhr, status, error) {
+ do stuff here
+var data = jQueryJSON(xhr.responseText);
+console.log(data);
+}
     });
 
         
