--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ success: function(data)
 
          },
 error : function(xhr, status, error) {
- do stuff here
+// do stuff here
 var data = jQueryJSON(xhr.responseText);
 console.log(data);
 }
