--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@ success: function(data)
       $("#empresa").val(data.empresa); //o data será um objeto com os dados nessa linha é o exemplo 
 
          },
-error : function(xhr, status, error) {
+//error : function(xhr, status, error) {
 // do stuff here
-var data = jQueryJSON(xhr.responseText);
-console.log(data);
-}
+//var data = jQuery.parseJSON(xhr.responseText);
+//console.log(data);
+//}
  });
 };
   </script>
