--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   function matriculaFn(mat){
       $.ajax({
 method:'GET',
-url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/342777', //mudar aqui para a url que o gus te passou
+url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/'+mat+'', //mudar aqui para a url que o gus te passou
 async: true,
        crossDomain:true, //testa com false se der pau
 contentType: 'application/json;charset=utf-8',       
@@ -39,6 +39,9 @@ dataType: 'json',
 headers: {
       "Authorization": "Token e4b8860f456b3c98b9590250de0707560bda10b8" //pode validar com o gus se ele usou esse token no postman tb
  },
+   options : { 
+       useSSL: true  //pode remover esse parâmetro se der pau tb (todo o option)
+   }, 
 success: function(data)
         { 
         console.log(data); //exibe o retorno no console do navegador (f12)
