--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ success: function(data)
         console.log(data); //exibe o retorno no console do navegador (f12)
       var dados = JSON.stringify(data);
       console.log(dados);
-      $("empresa").val(data.empresa); //o data será um objeto com os dados nessa linha é o exemplo 
+      $("#empresa").val(data.empresa); //o data será um objeto com os dados nessa linha é o exemplo 
 
          },
 //error : function(xhr, status, error) {
