--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       $.ajax({
 method:'GET',
 url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/'+mat+'', //mudar aqui para a url que o gus te passou
-async: true,
+async: false,
        crossDomain:false, //testa com false se der pau
 contentType: 'application/json;charset=utf-8',       
 dataType: 'json',       
