--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ headers: {
       "Authorization": "Token e4b8860f456b3c98b9590250de0707560bda10b8" //pode validar com o gus se ele usou esse token no postman tb
  },
    options : { 
-       useSSL: true  //pode remover esse parâmetro se der pau tb (todo o option)
+       useSSL: false  //pode remover esse parâmetro se der pau tb (todo o option)
    }, 
 success: function(data)
         { 
