--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
- <script type="text/javascript">
+ 
+  <script type="text/javascript">
   function matriculaFn(mat){
       $.ajax({
 method:'GET',
@@ -467,6 +468,30 @@ success: function(data)
     $("#mobileToggle").on('click', function(e) {
       e.preventDefault();
       $(".iframe-preview").addClass("iframe-preview-mobile");
+      
+      server {
+    server_name example.com;
+
+    location / {
+        if ($request_method = OPTIONS ) {
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Methods "GET, OPTIONS";
+            add_header Access-Control-Allow-Headers "Authorization";
+
+            # Not necessary
+            #            add_header Access-Control-Allow-Credentials "true";
+            #            add_header Content-Length 0;
+            #            add_header Content-Type text/plain;
+
+            return 200;
+        }
+
+        auth_basic "Restricted";
+        auth_basic_user_file /var/.htpasswd;
+
+        proxy_pass http://127.0.0.1:8100;
+    }
+}
     });
   </script>
 
