--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ function matriculaFn(mat){
   headers.append('Access-Control-Allow-Origin', 'https://marcocoffee.netlify.com');
   headers.append('Access-Control-Allow-Credentials', 'true');
   headers.append('GET', 'POST', 'OPTIONS');
-  headers.append('Authorization', 'Token e4b8860f456b3c98b9590250de0707560bda10b8';
+  headers.append('Authorization', 'Token e4b8860f456b3c98b9590250de0707560bda10b8');
    $.ajax({
         method:'GET',
         url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/'+mat+'', //mudar aqui para a url que o gus te passou
