--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function matriculaFn(mat){
        crossDomain:false, //testa com false se der pau
        contentType: 'application/json;charset=utf-8',       
        dataType: 'json',       
-       headers: headers
+       headers: headers,
        options : { 
          useSSL: true  //pode remover esse parâmetro se der pau tb (todo o option)
         }, 
