--- a/index.html
+++ b/index.html
@@ -29,40 +29,37 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
  
   <script type="text/javascript">
-function matriculaFn(mat){
-  let headers = new Headers();
-  headers.append('Content-Type', 'application/json');
-  headers.append('Accept', 'application/json');
-  headers.append('Access-Control-Allow-Origin', 'https://marcocoffee.netlify.com');
-  headers.append('Access-Control-Allow-Credentials', 'true');
-  headers.append('GET', 'POST', 'OPTIONS');
-  headers.append('Authorization', 'Token e4b8860f456b3c98b9590250de0707560bda10b8');
-   $.ajax({
-        method:'GET',
-        url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/'+mat+'', //mudar aqui para a url que o gus te passou
-   async: true,
-       crossDomain:false, //testa com false se der pau
-       contentType: 'application/json;charset=utf-8',       
-       dataType: 'json',       
-       headers: headers,
-       options : { 
-         useSSL: true  //pode remover esse parâmetro se der pau tb (todo o option)
+  function matriculaFn(mat){
+
+$.ajax({
+method:'GET',
+
+url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/'+mat+'', //mudar aqui para a url que o gus te passou
+async: true,
+       crossDomain:true, //testa com false se der pau
+contentType: 'application/json;charset=utf-8',       
+dataType: 'json',       
+headers: {
+      "Authorization": "Token e4b8860f456b3c98b9590250de0707560bda10b8" //pode validar com o gus se ele usou esse token no postman tb
+ },
+options : { 
+           useSSL: true  //pode remover esse parâmetro se der pau tb (todo o option)
         }, 
 success: function(data)
         { 
         console.log(data); //exibe o retorno no console do navegador (f12)
       var dados = JSON.stringify(data);
       console.log(dados);
-      $("#empresa").val(data.empresa); //o data será um objeto com os dados nessa linha é o exemplo 
-       },
-//error : function(xhr, status, error) {
+      $("#IDDOCAMPO").val(data.AlgumaCoisa); //o data será um objeto com os dados nessa linha é o exemplo 
+
+         },
+error : function(xhr, status, error) {
 // do stuff here
-//var data = jQuery.parseJSON(xhr.responseText);
-//console.log(data);
-//}
- });
-};
- 
+var data = jQueryJSON(xhr.responseText);
+console.log(data); 
+}
+    });
+    };
   </script>
 <html lang="en"><head>
 
