--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ method:'GET',
 
 url:'http://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/'+mat+'', //mudar aqui para a url que o gus te passou
 async: true,
-       crossDomain:true, //testa com false se der pau
+       crossDomain:false, //testa com false se der pau
 contentType: 'application/json;charset=utf-8',       
 dataType: 'json',       
 headers: {
