--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@ success: function(data)
       $("#IDDOCAMPO").val(data.AlgumaCoisa); //o data será um objeto com os dados nessa linha é o exemplo 
 
          },
-error : function(xhr, status, error) {
+//error : function(xhr, status, error) {
 // do stuff here
-var data = jQuery.getJSON(xhr.responseText);
-console.log(data); 
-}
+//var data = jQuery.getJSON(xhr.responseText);
+//console.log(data); 
+//}
     });
     };
   </script>
