--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ contentType: 'application/json;charset=utf-8',
 dataType: 'json',       
 headers: {
       "Authorization": "Token e4b8860f456b3c98b9590250de0707560bda10b8" //pode validar com o gus se ele usou esse token no postman tb
+      'Access-Control-Allow-Origin': '*',
  },
 options : { 
            useSSL: true  //pode remover esse parâmetro se der pau tb (todo o option)
