--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <script language="JavaScript" src="resume.js"></script>
@@ -38,9 +38,9 @@ url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badg
 async: true,
        crossDomain:true, //testa com false se der pau
 contentType: 'application/json;charset=utf-8',       
-dataType: 'json',       
+dataType: 'jsonp',       
 headers: {
-      "Authorization": "Token e4b8860f456b3c98b9590250de0707560bda10b8" //pode validar com o gus se ele usou esse token no postman tb
+      "Authorization": "e4b8860f456b3c98b9590250de0707560bda10b8" //pode validar com o gus se ele usou esse token no postman tb
  },
   xhrFields: {
     withCredentials: true
