--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ async: false,
 contentType: 'application/json;charset=utf-8',       
 dataType: 'jsonp',       
 headers: {
-      "Authorization": "Token e4b8860f456b3c98b9590250de0707560bda10b8" //pode validar com o gus se ele usou esse token no postman tb
+  "Authorization": "Basic Token e4b8860f456b3c98b9590250de0707560bda10b8"
+   //pode validar com o gus se ele usou esse token no postman tb
  },
   xhrFields: {
     withCredentials: false
