--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ $.ajax({
 method:'GET',
 
 url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badge/'+mat+'', //mudar aqui para a url que o gus te passou
-async: false,
-      //crossDomain:true, //testa com false se der pau
+async: true,
+crossDomain:true, //testa com false se der pau
 contentType: 'application/json;charset=utf-8',       
 dataType: 'jsonp',       
 headers: {
