--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ url:'https://rhconnect.marcopolo.com.br/api/workers/data_employee/company/1/badg
 async: true,
 crossDomain:true, 
 contentType: 'application/json;charset=utf-8',       
-dataType: 'jsonp',       
+dataType: 'json',       
 headers: {
   "Authorization": "Basic Token e4b8860f456b3c98b9590250de0707560bda10b8"
    //pode validar com o gus se ele usou esse token no postman tb
