--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ success: function(data)
     });
     };
   </script>
-
+</head>
 <body id="page-top" class="form-group">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
